--- a/.github/workflows/SyncFromGitee.yml
+++ b/.github/workflows/SyncFromGitee.yml
@@ -1,6 +1,10 @@
 name: Sync Github Repos From Gitee
 
 on:
+  schedule:
+    # `分 时 天 月 周` 时按照标准时间 北京时间=标准时间+8 18表示北京时间早上2点
+    #    - cron: '0 18 * * 1'
+    - cron: '0 4 * * 1'
   push:
     branches:
       - master
